# belka-server

./: .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  template.env  tox.ini
db/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml
db/.history/: README.md
src/: main.py  on_startup.py
src/auth/: Dockerfile  assets.py  config.py  conftest.py  docker-compose.yml  generate-keys.sh  gensalt.py  get_badges.py  middleware.py
src/auth/handlers/errors/: codes.py  handlers.py
src/auth/helpers/: tools.py
src/auth/schemas/: ads.py  image.py  indicators.py  log.py  request.py  scheme_tools.py  token.py  user.py
src/auth/static/: custom.css  index.html
src/auth/tests/ads/: conftest.py  test_cant_crud_ads.py  test_crud_ads.py  test_crud_images.py  test_list_ads.py
src/auth/tests/app/: test_jwt_obtain.py  test_jwt_refresh.py  test_jwt_verify.py  test_me.py  test_tools.py
src/auth/tests/indicator/: conftest.py  test_cant_crud_ads.py  test_crud_ads.py  test_crud_images.py  test_limit_of_crud_ads.py  test_list_ads.py
src/auth/tests/logs/: conftest.py  off_crud_logs.py  test_cant_crud_indicator.py  test_crud_indicator.py  test_crud_log.py  test_crud_logs.py  test_limit_of_crud_indicator.py  test_list_logs.py
src/auth/users/: ads_manager.py  dependencies.py  exceptions.py  image_manager.py  indicator_manager.py  init.py  log_manager.py  user_manager.py
src/auth/users/router/: open_api.py  responses.py
src/auth/users/security/: jwt_actions.py  jwt_tools.py
src/common/: tools.py
src/django_space/: config.py  manage.py
src/django_space/ads/: admin.py  apps.py  config.py  exception.py  models.py
src/django_space/ads/migrations/: 0001_initial.py  0002_rename_images_image.py  0003_rename_description_ads_desc.py  0004_rename_ads_image_ads_id.py  0005_image_is_main.py
src/django_space/ads/routers/: __init__.py  ad_crud.py  image_crud.py
src/django_space/django_space/: asgi.py  responses.py  settings.py  urls.py  wsgi.py
src/django_space/django_space/adapters/: __init__.py
src/django_space/django_space/routers/: __init__.py  home.py  jwt_obtain.py  jwt_refresh.py  jwt_verify.py  me.py
src/django_space/indicators/: admin.py  apps.py  config.py  exception.py  models.py
src/django_space/indicators/migrations/: 0001_initial.py  0002_alter_log_date.py  0003_alter_log_date.py  0004_alter_log_date.py  0005_alter_indicator_name_log_unique_log.py  (+2 more)
(+3 files in other folders)
