[tool.poetry]
name = "belka"
version = "1.0.0"
description = "Тестовое задание"
authors = ["Dmitry Mavlin <mavlind@list.ru>"]
license = "GPLv3"
packages = [{include = "src/auth"}]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.1.0"
aiosqlite = "^0.17.0"
alembic = "^1.7.7"
asyncpg = "^0.26.0"
asyncpgsa = "^0.27.1"
bcrypt = "^3.2.0"
celery = "^5.2.6"
click = "^8.1.3"
coloredlogs = "^15.0.1"
ConfigArgParse = "^1.5.3"
django = "^4.2"
djantic = "^0.7.0"
email-validator = "^1.1.3"
emails = "^0.6"
fastapi = "^0.95.1"
fastapi-mail = "^1.0.6"
fastapi-pagination = "^0.10.0"
fastapi-users = "^10.1.5"
fastapi-users-db-sqlalchemy = "^3.0.1"
fastapi-utils = "^0.2.1"
httpx-oauth = "^0.6.0"
Jinja2 = "^3.1.2"
logrich = "^0.3.1"
loguru = "^0.6.0"
makefun = "^1.13.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"
PyJWT = "^2.3.0"
pymdown-extensions = "^9.5"
python-dotenv = "^0.19.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
python-slugify = "^6.1.2"
raven = "^6.10.0"
requests = "^2.27.1"
rich = "^12.4.4"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.2"
tenacity = "^8.0.1"
toml = "^0.10.2"
typer = "^0.4.0"
types-python-slugify = "^6.1.0"
types-toml = "^0.10.8"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
yarl = "^1.8.1"

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^1.0.1"
autoflake = "^1.4"
black = "^23.3.0"
bpython = "^0.24"
django-extensions = "^3.2.1"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.0"}
Faker = "^15.3.3"
flake8 = "^4.0.1"
httpx = "^0.22.0"
ipython = "^8.13.2"
isort = "^5.10.1"
locust = "^2.15.1"
mypy = "^1.2.0"
poetry-plugin-sort = "^0.1.1"
pre-commit = "^2.18.1"
ptpython = "^3.0.23"
pylint = "^2.12.2"
pytest = "7.2.1"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.20.3"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pytest-picked = "0.4.6"
pytest-testmon = "^2.0.6"
pytest-watch = "^4.2.0"
sh = "^2.0.3"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41"}
sqlalchemy2-stubs = "^0.0.2-alpha.25"
types-Markdown = "^3.4.1"
types-requests = "^2.28.6"
watchdog = "2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
quiet = true
fast = true

[tool.isort]
multi_line_output = 3
profile = "black"
